# DIRECT-Claw

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: agent.yaml  cfg.yaml  prompts.yaml
src/: main_T2V.py  main_agent.py  main_evaluate.py  main_preprocess.py
src/agent/: director.py  director_validation.py  editing_utils.py  editor.py  interaction_utils.py  llm_interface.py  music_utils.py  planner.py  planner_summary.py  retriever.py
src/eval/: __init__.py  evaluate.py
src/eval/metrics/: __init__.py  energy_score.py  motion_score.py  saliency_score.py  semantic_score.py
src/features/: __init__.py  features.py
src/preprocess/: preprocess.py  shot_detect.py
src/preprocess/calc/: __init__.py  clip_embed.py  optical_flow.py  saliency.py
src/utils/: decoder.py  decoder_torchcodec.py  path.py
